--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "@tailwindcss/forms": "0.2.1",
+    "axios": "^1.1.3",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^8.0.4",
     "react-scripts": "4.0.3",
+    "swr": "^1.3.0",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
