--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
     "react": "17.0.1",
+    "react-alert": "^7.0.3",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.38.0",
     "react-redux": "^8.0.4",
     "react-scripts": "4.0.3",
-    "swr": "^1.3.0",
-    "tailwindcss": "2.0.4"
+    "swr": "^1.3.0"
   },
   "scripts": {
     "start": "next start",
@@ -48,7 +49,8 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "10.2.5",
-    "postcss": "8.2.8"
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^3.2.1"
   }
 }
